[package]
name = "msp-operator"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
bytes = "1.0.1"
cargo-expand = "1.0.8"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = "0.3.16"
k8s-openapi = { version = "0.13.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.59.0", features = ["derive" ] }
kube-runtime = "0.59.0"
log = "0.4.14"
prost = "0.8.0"
prost-derive = "0.8.0"
schemars = "0.8.3"
serde = "1.0.127"
serde_json = "1.0.66"
serde_yaml = "0.8.18"
snafu = "0.6.10"
tokio = { version = "1.10.0", features = ["full"] }
tonic = "0.5.2"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost" ] }
